Update on Overleaf.

--- a/abstract.tex
+++ b/abstract.tex
@@ -12,7 +12,7 @@ Random program generation --- fuzzing --- is an effective technique for discover
 % A novel approach for the rapid development of broad, undirected fuzzers
 We introduce DeepSmith, a novel approach which takes advantage of state-of-the-art deep learning techniques to automate and accelerate compiler validation. Our approach constructs a learned model of the structure of real world code based on a large corpus of open source code. Then, it uses the model to automatically generate tens of thousands of realistic programs. Finally, it applies established differential testing methodologies on them to expose bugs in compilers.
 
-We apply our approach to the OpenCL programming language, automatically exposing bugs in OpenCL compilers with little effort on our side. In over 1,500 hours of automated testing of commercial and open source compilers, we discover bugs in all of them, %
+We apply our approach to the OpenCL programming language, automatically exposing bugs in OpenCL compilers with little effort on our side. In 1,000 hours of automated testing of commercial and open source compilers, we discover bugs in all of them, %
 %
 % made up of XX interesting test cases, compared to a similar XX for the state of the art technique given the same time.
 %
