--- a/sec/eval.tex
+++ b/sec/eval.tex
@@ -734,7 +734,7 @@ Prior work on compiler test case generation has focused on extensive stress-test
 % >> 2144
 % ls | wc -l
 % >> 4655
-\paragraph{Thread-dependent Flow Control} A common pattern in OpenCL is to obtain the thread identity, often as an \texttt{int}, and to compare this against some fixed value to determine whether or not to complete a unit of work (46\% of OpenCL kernels on GitHub use this ($tid \rightarrow$ int, \texttt{if (tid < \ldots) \{\ldots\}}) pattern). DeepSmith, having modeled the frequency with which this pattern occurs in real handwritten code, generates many permutations of this pattern. And in doing so, exposed an error in the optimizer of two Testbeds $4+$, $6+$ which causes the \texttt{if} statement of Figure~\ref{lst:intel-size_t-int-unreduced} to be executed when the kernel is compiled with optimizations enabled. We have reported this issue to Intel. CLSmith does not permit thread index to modify control flow, rendering such productions impossible.
+\paragraph{Thread-dependent Flow Control} A common pattern in OpenCL is to obtain the thread identity, often as an \texttt{int}, and to compare this against some fixed value to determine whether or not to complete a unit of work (46\% of OpenCL kernels on GitHub use this ($tid \rightarrow$ int, \texttt{if (tid < \ldots) \{\ldots\}}) pattern). DeepSmith, having modeled the frequency with which this pattern occurs in real handwritten code, generates many permutations of this pattern. And in doing so, exposed an error in the optimizer of two Testbeds $4+$, $6+$ which causes the \texttt{if} statement of Figure~\ref{lst:intel-size_t-int-unreduced} to be executed when the kernel is compiled with optimizations enabled. We have reported this issue to Intel. CLSmith does not permit the thread index to modify control flow, rendering such productions impossible.
 
 Figure~\ref{lst:oclgrind-race-switch} shows a simple program in which thread identity determines the program output. We found that this test case would sporadically crash Testbeds~$10\pm$, an OpenCL device simulator and debugger. Upon reporting to the developers, the underlying cause was quickly diagnosed as a race condition in \texttt{switch} statement evaluation, and fixed within a week.
 
@@ -978,21 +978,32 @@ Over the course of testing, a combined $3.4 \times 10^8$ lines of CLSmith code w
   \label{fig:clangs} %
 \end{figure}
 
+% \begin{table}
+%   \scriptsize %
+%   \centering %
+%   \input{build/tab/clang-asserts}
+%   \caption{%
+%     Distinct Clang front-end assertions triggered by DeepSmith, and the number of distinct unreachables.%
+%   }
+%   \label{tab:clangs}
+% \end{table}
+
 \begin{table}
   \scriptsize %
   \centering %
-  \input{build/tab/clang-asserts}
+  \input{build/tab/clang-assert-counts}
   \caption{%
-    Distinct Clang front-end assertions triggered by DeepSmith, and the number of distinct unreachables.%
+    The number of DeepSmith programs which trigger distinct Clang front-end assertions, and the number of programs which trigger unreachables.%
   }
   \label{tab:clangs}
 \end{table}
 
 The Clang front-end to LLVM supports OpenCL, and is commonly used in OpenCL drivers. This in turn causes Clang-related defects to potentially affect multiple compilers, for example the one in Figure~\ref{lst:almost-everything-crash}. To evaluate the impact of Clang, we used debug+assert builds of every LLVM release in the past 24 months and processed 75,000 DeepSmith kernels through the Clang front-end (this includes the lexer, parser, and type checker, but not code generation).
 
-Figure~\ref{fig:clangs} shows that the crash rate of Clang front-ends is almost steadily decreasing over time. The number of failing DeepSmith kernels decreased tenfold between 3.6.2 and 6.0.0. \cc{Does that suggest that DeepSmith is finding bugs which developers are interested in fixing?} \pp{We do find interesting bugs, but the important question is whether we are more likely to find interesting bugs than CLSmith.}
-Table~\ref{tab:clangs} shows the 7 distinct assertions triggered during this experiment. Assertion 1 (uncorrected typos) is raised on all compiler versions --- see Figure~\ref{lst:oclgrind-uncorrected-typos} for an example. This shows that compiler validation is a moving target. Release 6.0.0 has the second lowest crash rate, but is joint first in terms of the number of unique assertions. Assertions 3 and 4 where triggered by some kernels under version 6.0.0 but not under any other tested Clang version. This indicates that changes introduced in the latest version of Clang were not sufficiently tested.  %Neither metric is perfect.
+Figure~\ref{fig:clangs} shows that the crash rate of Clang front-ends is, for the most part, steadily decreasing over time. The number of failing compiler crashes decreased tenfold between 3.6.2 and 6.0.0.
+%\cc{Does that suggest that DeepSmith is finding bugs which developers are interested in fixing?} \pp{We do find interesting bugs, but the important question is whether we are more likely to find interesting bugs than CLSmith.}
+Table~\ref{tab:clangs} shows the 7 distinct assertions triggered during this experiment. Assertion 1 (uncorrected typos) is raised on all compiler versions --- see Figure~\ref{lst:oclgrind-uncorrected-typos} for an example. The overall rate at which the assertion is triggered has decreased markedly, although there are slight increases between releases. This emphasizes that compiler validation is a moving target. Every change and feature addition has the potential to introduce regressions or new failure cases.
 
-TODO: Report the 5 distinct crashes in LLVM trunk.
+Release 6.0.0 has the second lowest crash rate, but is joint first in terms of the number of unique assertions. Assertions 3 and 4 where triggered by some kernels under version 6.0.0 but not under any other tested Clang version. An example of a kernel which crashes version 6.0.0 is shown in Figure~\ref{TODO}. This indicates that changes introduced in the latest version of Clang were not sufficiently tested \cc{OR that a new assertion was added! I need to check the source code}.
 
-TODO: What programs crash all versions? What programs are regressions?
+We have submitted bug reports for for each of the distinct assertions in LLVM 6.0.0, and two distinct unreachables.
