Update on Overleaf.

--- a/sec/eval.tex
+++ b/sec/eval.tex
@@ -973,7 +973,7 @@ Over the course of testing, a combined $3.4 \times 10^8$ lines of CLSmith code w
   \centering %
   \includegraphics[width=.95\columnwidth]{build/img/clang-crashes}%
   \caption{%
-    Crash rate of every LLVM release in the past 24 months compiling 75k DeepSmith kernels using Clang front-end.% 2 years of development has lead to a tenfold decrease in crash rate.
+    Crash rate of the Clang front-end of every LLVM release in the past 24 months compiling 75k DeepSmith kernels.
   }%
   \label{fig:clangs} %
 \end{figure}
