Update on Overleaf.

--- a/sec/deepsmith.tex
+++ b/sec/deepsmith.tex
@@ -74,7 +74,7 @@ Unlike the generative model, this test harness is language-specific and the desi
 \paragraph*{Test Harness Output Classes}
 \begin{figure}
   \centering %
-  \includegraphics[width=\columnwidth]{img/testprocess}%
+  \includegraphics[width=\columnwidth]{img/testprocess-long}%
   \caption{%
  	  Test case execution, and possible results.%
   }%
