Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -3,7 +3,7 @@
 \begin{document}
 
 \title{Compiler Fuzzing through Deep Learning}
-% \date{}  % hides the date
+\date{}  % hides the date
 \maketitle
 
 \input{abstract}
