--- a/sec/deepsmith.tex
+++ b/sec/deepsmith.tex
@@ -127,8 +127,8 @@ An \emph{anomalous wrong-output} occurs if, for a given test case, the majority 
 % \paragraph{Design Trade-Offs}
 %Our sequence-to-sequence approach to program generation greatly simplifies the implementation --- targeting a new language requires only a corpus of example programs and a test harness for generated codes. The generative model itself contains no language-specific code, and is implemented in less than 200 lines of Python --- a small fraction of that of prior approaches. The trade-off of this makes significantly reduces the cost of development, but we provide no guarantees on generated program correctness. \cc{not well formed, not well typed, and not free from undefined behavior}
 
-\subsection{False Positives for Anomalous Wrong-output}\label{subsec:discussions}
-\hl{Generated programs may contain undefined or non-deterministic behavior which will incorrectly be labeled as anomalous. CSmith circumvents this problem mostly by not generating such code in the first place and performing certain static and dynamic analyses during generation to filter out the more complex cases. Although similar analyses could be created as filters for our system, we take a simpler approach, filtering only the few types of non-deterministic behavior we have actually observed. 
+\paragraph{False Positives for Anomalous Runtime Behavior}\label{subsec:discussions}
+Generated programs may contain undefined or non-deterministic behavior which will incorrectly be labeled as anomalous. CSmith circumvents this problem mostly by not generating such code in the first place and performing certain static and dynamic analyses during generation to filter out the more complex cases. Although similar analyses could be created as filters for our system, we take a simpler approach, filtering only the few types of non-deterministic behavior we have actually observed. 
 
 We filter data races and out-of-bounds accesses with GPUverify~\cite{Betts2012} and Oclgrind. Some compiler warnings provide strong indication of non-deterministic behavior (e.g. comparison between pointer and integer) -- we check for these warnings and filter accordingly.
 
@@ -136,7 +136,7 @@ We filter data races and out-of-bounds accesses with GPUverify~\cite{Betts2012} 
   
 Floating point operations in OpenCL can be imprecise, so code can produce different output on different testbeds. For this reason, CSmith and CLSmith do not support floating point operations. DeepSmith allows floating point operations but since it cannot apply differential testing on the outputs, it can detect all results except for the \emph{anomalous wrong-output} results.
 
-The last type of undefined behavior comes from division by zero and related mathematical functions which require non-zero values. We apply a simple heuristic -- we change the input values and check to see if the output remains anomalous. While theoretically insufficient, in practice we found that no false positives remained.}
+The last type of undefined behavior we observed comes from division by zero and related mathematical functions which require non-zero values. We apply a simple detection and filtering heuristic -- we change the input values and check to see if the output remains anomalous. While theoretically insufficient, in practice we found that no false positives remained.
 
 %\paragraph{Undefined Behaviors} % aka. unambiguous observable behaviour
 %Differential testing is valid only for programs that do not rely on undefined behavior. Detecting such cases is difficult, especially since OpenCL does not have the rich toolset of C, for example CompCert or UBSan. Some errors such as data races and out-of-bounds accesses can be caught with GPUverify~\cite{Betts2012} and Oclgrind, while compiler warnings may indicate undefined behavior (e.g. comparison between pointer and integer). For the rest, our approach does not rule out manual inspection. DeepSmith programs are short and easily interpretable, so manual inspection is feasible. Still, we have not yet discovered a false-positive result which was not trivially detectable by automated filtering.
