--- a/paper.tex
+++ b/paper.tex
@@ -18,7 +18,8 @@
 \input{sec/conclusion}
 
 % \input{sec/acks}  % double blind review
-
-\printbibliography
+%\bibliographystyle{plain}
+%\bibliography{references}
+%\printbibliography
 
 \end{document}
