Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -20,6 +20,6 @@
 % \input{sec/acks}  % double blind review
 %\bibliographystyle{plain}
 %\bibliography{references}
-%\printbibliography
+\printbibliography
 
 \end{document}
