--- a/preamble.tex
+++ b/preamble.tex
@@ -4,7 +4,8 @@
 % Requires temporary version of sigplanconf style file provided on
 % PLDI'16 web site.
 %
-\documentclass[pageno,nonatbib]{jpaper}
+%\documentclass[pageno,nonatbib]{jpaper}
+\documentclass[pageno]{jpaper}
 % \documentclass[pldi-cameraready]{sigplanconf-pldi16}
 
 \newcommand{\asplossubmissionnumber}{190}
