Preparing to fix outcome names

--- a/preamble.tex
+++ b/preamble.tex
@@ -162,3 +162,9 @@ maxbibnames=99       % no 'et-al' condensing author names in biliography
 \usepackage{multirow}
 \newcommand{\cmark}{\ding{51}}
 \newcommand{\xmark}{\ding{55}}
+
+\newcommand\bc{\textbf{bc}}
+\newcommand\bto{\textbf{bto}}
+\newcommand\abf{\textbf{abf}}
+\newcommand\arc{\textbf{arc}}
+\newcommand\awo{\textbf{awo}}
