--- a/sec/eval.tex
+++ b/sec/eval.tex
@@ -994,6 +994,6 @@ Figure~\ref{fig:clangs} shows that the crash rate of Clang front-ends is, for th
 %\cc{Does that suggest that DeepSmith is finding bugs which developers are interested in fixing?} \pp{We do find interesting bugs, but the important question is whether we are more likely to find interesting bugs than CLSmith.}
 Table~\ref{tab:clangs} shows the 7 distinct assertions triggered during this experiment. Assertion 1 (uncorrected typos) is raised on all compiler versions --- see Figure~\ref{lst:oclgrind-uncorrected-typos} for an example. The overall rate at which the assertion is triggered has decreased markedly, although there are slight increases between releases. This emphasizes that compiler validation is a moving target. Every change and feature addition has the potential to introduce regressions or new failure cases.
 
-Release 6.0.0 has the second lowest crash rate, but is joint first in terms of the number of unique assertions. Assertions 3 and 4 where triggered by some kernels under version 6.0.0 but not under any other tested Clang version. An example of a kernel which crashes version 6.0.0 is shown in Figure~\ref{TODO}. This indicates that changes introduced in the latest version of Clang were not sufficiently tested \cc{OR that a new assertion was added! I need to check the source code}.
+Release 6.0.0 has the second lowest crash rate, but is joint first in terms of the number of unique assertions. Assertions 3 and 4 where triggered by some kernels under version 6.0.0 but not under any other tested Clang version. This indicates that changes introduced in the latest version of Clang were not sufficiently tested \cc{OR that a new assertion was added! I need to check the source code}.
 
 We have submitted bug reports for for each of the distinct assertions in LLVM 6.0.0, and two distinct unreachables.
